filter_macros/tests/try/err/missing_fromrow.stderr
warning: unused import: `sqlx::FromRow`
 --> tests/try/err/missing_fromrow.rs:2:5
  |
2 | use sqlx::FromRow;
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `for<'r> T: FromRow<'r, PgRow>` is not satisfied
 --> tests/try/err/missing_fromrow.rs:6:12
  |
6 | pub struct T {
  |            ^ the trait `for<'r> FromRow<'r, PgRow>` is not implemented for `T`
  |
  = help: the following other types implement trait `FromRow<'r, R>`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
note: required by a bound in `filter_traits::Filterable::Entity`
 --> $WORKSPACE/filter_traits/src/lib.rs
  |
  |     type Entity: Send + Unpin + for<'r> sqlx::FromRow<'r, sqlx::postgres::PgRow>;
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Filterable::Entity`
